--- a/mavenproject1/pom.xml
+++ b/mavenproject1/pom.xml
@@ -28,7 +28,31 @@
             <version>4.3.6.Final</version>
         </dependency>
 
-        
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>4.3.6.Final</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.ow2.orchestra.eclipse.birt</groupId>
+            <artifactId>org.ow2.orchestra.eclipse.birt.core</artifactId>
+            <version>3.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
